--- a/TAREA/index.html
+++ b/TAREA/index.html
@@ -39,7 +39,7 @@
 
                 <div class="primera-escena">
                     <p class="subtexto">Visto por primera vez:</p>
-                    <p>Norte de Islandia</p>
+                    <p class="dato-primera-escena">Norte de Islandia</p>
                 </div>
             </div>
 
