Conocimiento del Header, Main, Footer, y la etiqueta form

--- a/HTML-CSS/EtiquetasHTML/index.html
+++ b/HTML-CSS/EtiquetasHTML/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head> <!-- En el head, van los metadatos de la página -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="style.css">
 
     <!-- Fuente de letra  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,43 +13,64 @@
 
     <title>Vinland Saga</title>
 </head>
+
 <body>
-    
-    <h1>Vinland Saga es un hermoso manga.</h1> 
-    <!--El h1, solamente se puede usar una vez en toda la pagina-->
-    <h2>Subtitulos</h2>
-    <h3>h3</h3>
-    <h4>h4</h4>
-    <h5>h5</h5>
-    <h6>h6</h6>
 
-    <h2>Parrafos</h2>
-    <p>Texto en parrafo</p>
+    <header>
+        <!-- Header siempre en el Body -->
+        <!-- El header es el encabezado de la pàgina -->
+    </header>
 
-    <h2>Listas</h2>
-    <h3>Listas Ordenadas</h3>
-    <ol>
-        <li>elemento</li>
-        <li>2do elemento</li>
-    </ol>
+    <main>
+        <h1>Vinland Saga es un hermoso manga.</h1>
+        <!--El h1, solamente se puede usar una vez en toda la pagina-->
+        <h2>Subtitulos</h2>
+        <h3>h3</h3>
+        <h4>h4</h4>
+        <h5>h5</h5>
+        <h6>h6</h6>
 
-    <h3>Listas No Ordenadas</h3>
-    <ul>
-        <li>elemento sin orden</li>
-        <li>elemento no ordenado</li>
-    </ul>
+        <h2>Parrafos</h2>
+        <p>Texto en parrafo</p>
 
-    <h2>Links</h2>
-    <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.friv.com/z/play/juegos.html&ved=2ahUKEwjpsbeNiIWMAxVsgWEGHbaBNGgQFnoECAkQAQ&usg=AOvVaw3G7LPLlh9ID96gIOt3U9kV" target="_blank">Github</a>
+        <h2>Listas</h2>
+        <h3>Listas Ordenadas</h3>
+        <ol>
+            <li>elemento</li>
+            <li>2do elemento</li>
+        </ol>
 
-    <h2>Imagenes</h2>
-    <img width=200px height=120px src="https://img.pokemondb.net/sprites/scarlet-violet/icon/avif/salamence.avif" alt="Swampert">
+        <h3>Listas No Ordenadas</h3>
+        <ul>
+            <li>elemento sin orden</li>
+            <li>elemento no ordenado</li>
+        </ul>
 
-    <h2>Botones</h2>
-    <button class="button-custom">Hola soy el botonsito, no uno, sino "el"</button>
+        <h2>Links</h2>
+        <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.friv.com/z/play/juegos.html&ved=2ahUKEwjpsbeNiIWMAxVsgWEGHbaBNGgQFnoECAkQAQ&usg=AOvVaw3G7LPLlh9ID96gIOt3U9kV"
+            target="_blank">Github</a>
 
-    <h2>div</h2>
-    <div>Hola, soy un div</div>
+        <h2>Imagenes</h2>
+        <img width=200px height=120px src="https://img.pokemondb.net/sprites/scarlet-violet/icon/avif/salamence.avif"
+            alt="Swampert">
 
+        <h2>Botones</h2>
+        <button class="button-custom">Hola soy el botonsito, no uno, sino "el"</button>
+
+        <h2>div</h2>
+        <div>Hola, soy un div</div>
+    </main>
+
+    <footer>
+        <!-- Pie de página -->
+        <!-- Links de referencia, creador de la página, políticas de privacidad -->
+        <nav>
+            <ul>
+                <li><a href="">Github</a></li>
+                <li><a href="">Facebook</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
+
 </html>
