--- a/TAREA/index.html
+++ b/TAREA/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
 
-    <title>Tarea Diego Ajata</title>
-  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet" />
 
-  <body>
+  <title>Tarea Diego Ajata</title>
+</head>
+
+<body>
+
+  <header>
+  </header>
+  <main>
     <div class="contenedor">
       <div>
         <a href="./thorfinn-vinlandsaga.jpeg" target="_blank">
-          <img
-            src="./thorfinn-vinlandsaga.jpeg"
-            alt="Thorfinn De Vinland Saga"
-          />
+          <img src="./thorfinn-vinlandsaga.jpeg" alt="Thorfinn De Vinland Saga" />
         </a>
       </div>
       <div>
+
         <div class="contenido-texto">
+
           <div class="nombre-estado">
+
             <h2>Thorfinn Thorsson Karlsefni</h2>
             <div class="circulo-en-linea">
               <div class="circulo"></div>
               <p class="texto-circulo">Vivo - Humano</p>
             </div>
+
           </div>
 
           <div class="ultima-localizacion">
@@ -47,5 +51,10 @@
         </div>
       </div>
     </div>
-  </body>
+  </main>
+  <footer>
+
+  </footer>
+</body>
+
 </html>
