Cambio de nombre del titulo de la tarjeta

--- a/TAREA/index.html
+++ b/TAREA/index.html
@@ -1,60 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-    rel="stylesheet" />
+    <title>Tarea Diego Ajata</title>
+  </head>
 
-  <title>Tarea Diego Ajata</title>
-</head>
-
-<body>
-
-  <header>
-  </header>
-  <main>
-    <div class="contenedor">
-      <div>
-        <a href="./thorfinn-vinlandsaga.jpeg" target="_blank">
-          <img src="./thorfinn-vinlandsaga.jpeg" alt="Thorfinn De Vinland Saga" />
-        </a>
-      </div>
-      <div>
-
-        <div class="contenido-texto">
-
-          <div class="nombre-estado">
-
-            <h2>Thorfinn Thorsson Karlsefni</h2>
-            <div class="circulo-en-linea">
-              <div class="circulo"></div>
-              <p class="texto-circulo">Vivo - Humano</p>
+  <body>
+    <header></header>
+    <main>
+      <div class="contenedor">
+        <div>
+          <a href="./thorfinn-vinlandsaga.jpeg" target="_blank">
+            <img
+              src="./thorfinn-vinlandsaga.jpeg"
+              alt="Thorfinn De Vinland Saga"
+            />
+          </a>
+        </div>
+        <div>
+          <div class="contenido-texto">
+            <div class="nombre-estado">
+              <h2>Thorfinn Karlsefni Thorsson</h2>
+              <div class="circulo-en-linea">
+                <div class="circulo"></div>
+                <p class="texto-circulo">Vivo - Humano</p>
+              </div>
             </div>
 
-          </div>
+            <div class="ultima-localizacion">
+              <p class="subtexto">Última localización conocida:</p>
+              <p class="unico-parrafo-naranja">Pueblo de Arnheid, Vinland</p>
+            </div>
 
-          <div class="ultima-localizacion">
-            <p class="subtexto">Última localización conocida:</p>
-            <p class="unico-parrafo-naranja">Pueblo de Arnheid, Vinland</p>
-          </div>
-
-          <div class="primera-escena">
-            <p class="subtexto">Visto por primera vez:</p>
-            <p class="dato-primera-escena">Norte de Islandia</p>
+            <div class="primera-escena">
+              <p class="subtexto">Visto por primera vez:</p>
+              <p class="dato-primera-escena">Norte de Islandia</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </main>
-  <footer>
-
-  </footer>
-</body>
-
+    </main>
+    <footer></footer>
+  </body>
 </html>
