--- a/HTML-CSS/EtiquetasHTML/ejemploForm/index.html
+++ b/HTML-CSS/EtiquetasHTML/ejemploForm/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <h2>Crear Un Nuevo Post</h2>
 
     <form id="postForm">
-        <label for="title">Titulo:</label>
-        <!-- Input es el encargado de recibir el texto o datos que el... -->
-        <!-- El label contenido, va de la mano del input, el "for" va de la mano con el "name" -->
-        <input type="text" id="title" name="title" />
+      <label for="title">Titulo:</label>
+      <!-- Input es el encargado de recibir el texto o datos que el... -->
+      <!-- El label contenido, va de la mano del input, el "for" va de la mano con el "name" -->
+      <input type="text" id="title" name="title" />
 
-        <label for="body">Contenido:</label>
-        <input type="text" id="body" name="body" />
+      <label for="body">Contenido:</label>
+      <input type="text" id="body" name="body" />
 
-        <button type="submit">Enviar</button>
+      <button type="submit">Enviar</button>
     </form>
 
     <h3>Respuesta:</h3>
@@ -30,35 +28,33 @@
     y cierre meter codigo Javascript    
     -->
     <script>
-        document
-            .getElementById("postForm")
-            .addEventListener("submit", async function (event) {
-                event.preventDefault(); //evita que la pagina sea recargada
+      document
+        .getElementById("postForm")
+        .addEventListener("submit", async function (event) {
+          event.preventDefault(); //evita que la pagina sea recargada
 
-                let nuevoPost = {
-                    title: document.getElementById("title").value,
-                    body: document.getElementById("body").value,
-                    userId: 1,
-                };
+          let nuevoPost = {
+            title: document.getElementById("title").value,
+            body: document.getElementById("body").value,
+            userId: 1,
+          };
 
-                let response = await fetch(
-                    "https://jsonplaceholder.typicode.com/posts",
-                    {
-                        method: "POST",
-                        body: JSON.stringify(nuevoPost),
-                        headers: { "Content-Type": "application/json" },
-                    }
-                );
+          let response = await fetch(
+            "https://jsonplaceholder.typicode.com/posts",
+            {
+              method: "POST",
+              body: JSON.stringify(nuevoPost),
+              headers: { "Content-Type": "application/json" },
+            }
+          );
 
-                let data = await response.json();
-                document.getElementById("response").innerText = JSON.stringify(
-                    data,
-                    null,
-                    2
-                );
-            });
+          let data = await response.json();
+          document.getElementById("response").innerText = JSON.stringify(
+            data,
+            null,
+            2
+          );
+        });
     </script>
-
-</body>
-
+  </body>
 </html>
