Creando formulario como tarea

--- a/HTML-CSS/ModeloDeCaja/Tarea-ModeloCaja/index.html
+++ b/HTML-CSS/ModeloDeCaja/Tarea-ModeloCaja/index.html
@@ -20,9 +20,9 @@
 
     <h2>Ejercicio 3: Display Inline-Block</h2>
     <ul>
-        <li class="inline-block-list">Item 1</li>
-        <li class="inline-block-list">Item 2</li>
-        <li class="inline-block-list">Item 3</li>
+        <li class="inline-block">Item 1</li>
+        <li class="inline-block">Item 2</li>
+        <li class="inline-block">Item 3</li>
     </ul>
 
     <h2>Ejercicio 4 y 5: Display Flex</h2>
