Tarjeta de Inicio Sesion completada

--- a/Tarea2-Ejercicio2/index.html
+++ b/Tarea2-Ejercicio2/index.html
@@ -8,25 +8,34 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+
     <title>Formulario</title>
 
 </head>
 
 <body>
     <main>
-        
+
         <div class="contenedor">
             <h2>Bienvenido</h2>
             <div>
-            <input type="text" placeholder="Usuario">
-            <input type="text" placeholder="Contraseña">
+                <input type="text" placeholder="Usuario">
+                <input type="password" placeholder="Contraseña">
             </div>
             <button>Login</button>
-            <h6>¿Perdiste tu contraseña?</h6>
-            <h6>¿No tienes cuenta? Registrate</h6>
+            <a href="index2.html" target="_blank">
+                <h6>¿Perdiste tu contraseña?</h6>
+            </a>
+
+
+            <a href="index2.html" target="_blank">
+                <h6>¿No tienes cuenta? Registrate</h6>
+            </a>
         </div>
-        <h6>Volver</h6>
+        <a href="index2.html" target="_blank">
+            <h6>Volver</h6>
+        </a>
     </main>
 </body>
 
