Nombres de algunas variables cambiadas

--- a/javascript/manipulacion-dom/ejercicios/ejercicio1/index.html
+++ b/javascript/manipulacion-dom/ejercicios/ejercicio1/index.html
@@ -1,32 +1,14 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicio 1</title>
-    <link rel="stylesheet" href="style.css"> </head>
-<body>
-    <input type="text" id="input"></input>
-    <button id="boton">Add</button>
-    <div id="container"></div>
-    <script src="script.js"></script>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lista de Tareas</title>
+    <title>Ejercicio 1 - DOM</title>
   </head>
   <body>
-    
-    <input type="text" id="inputTexto" placeholder="Escribí una tarea" />
-    <button id="boton">Agregar</button>
-    <ul id="containerLista">
-    </ul>
+    <input type="text" id="inputTexto" placeholder="Escribí una tarea..." />
+    <button id="boton">Add</button>
+    <ul id="containerLista"></ul>
     <script src="script.js"></script>
   </body>
 </html>
-
